<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_map"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_feed"
        android:enabled="true"
        android:icon="@drawable/ic_feed"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_feed"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_my_page"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_my_page"
        app:showAsAction="always" />
</menu>

