<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amazing.stamp.pages.session.RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:text="@string/tv_require_authority_title"
        android:textColor="@color/main_color_100"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tv_require_authority_necessary"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/gap_vertical"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_horizontal"
            android:drawableTint="@color/main_color_100"
            android:drawableLeft="@drawable/ic_location_resize"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"

             />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obj_require_authority_location"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_require_authority_location"
                    android:textColor="@color/gray_dark"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/gap_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_horizontal"
                android:drawableTint="@color/main_color_100"
                android:drawableLeft="@drawable/ic_download_resize"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_require_authority_storage"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_require_authority_download"
                    android:textColor="@color/gray_dark"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>




    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_require_authority"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="@dimen/btn_full_height"
        android:background="@drawable/btn_main_square"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/obj_require_authority_finish" />
</LinearLayout>