<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/gap_vertical"
        android:paddingHorizontal="@dimen/gap_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obj_Change_value_change_nickname_title"
            android:textSize="@dimen/semi_title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_vertical"
            android:text="@string/tv_Change_value_change_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_change_nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_full_height"
            android:layout_marginTop="@dimen/gap_line"
            android:background="@drawable/et_gray_10"
           />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_nickname_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_full_height"
        android:background="@drawable/btn_main_square"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/obj_Change_value_change_pw_yes" />

</LinearLayout>