<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amazing.stamp.pages.chat.ChatAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_chat_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        app:title="새로운 채팅방 만들기" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/gap_horizontal"
            android:paddingVertical="@dimen/gap_line_double">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obj_chat_add_title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_chat_add_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_full_height"
                android:layout_marginTop="@dimen/gap_line"
                android:background="@drawable/et_gray_10"
                android:hint="@string/obj_chat_add_title_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:text="@string/obj_chat_add_introduce"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_chat_add_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_line"
                android:background="@drawable/et_gray_10"
                android:gravity="top"
                android:hint="@string/obj_chat_add_introduce_hint"
                android:minHeight="@dimen/btn_full_height"
                android:minLines="3"
                android:paddingVertical="@dimen/gap_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:text="@string/obj_chat_add_location"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_chat_add_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_full_height"
                android:layout_marginTop="@dimen/gap_line"
                android:background="@drawable/et_gray_10"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_line_double"
                android:text="참가자"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_visitors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_line"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_profile_nickname" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_chat_visitor_add"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_small_height"
                android:layout_marginTop="@dimen/gap_line"
                android:background="@drawable/btn_main_light_10"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="@dimen/gap_line"
                android:text="참가자 추가"
                android:textColor="@color/main_color_100" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chat_add_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_full_height"
        android:background="@drawable/btn_main_square"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/obj_chat_add_finish" />
</LinearLayout>