<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amazing.stamp.pages.session.RegisterActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        app:title="@string/obj_register_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/gap_horizontal"
            android:paddingVertical="@dimen/gap_vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_for_rounding_10"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person_vector"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_profile_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:background="@drawable/circle_main_select_effect"
                    android:elevation="5dp"
                    android:padding="@dimen/gap_line"
                    android:src="@drawable/ic_photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.88"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.88"
                    app:tint="@color/white" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:text="@string/obj_register_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_email"
                    android:layout_width="70dp"
                    android:layout_height="@dimen/btn_small_height"
                    android:background="@drawable/btn_main_light_10"
                    android:text="@string/obj_email_certify"
                    android:visibility="gone"
                    android:textColor="@color/main_color_100" />

            </LinearLayout>

            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/gap_vertical"-->
            <!--                android:text="@string/obj_register_email_certify" />-->

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal">-->

            <!--                <EditText-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1" />-->

            <!--                <androidx.appcompat.widget.AppCompatButton-->
            <!--                    android:id="@+id/btn_email_certify"-->
            <!--                    android:layout_width="70dp"-->
            <!--                    android:layout_height="@dimen/btn_small_height"-->
            <!--                    android:background="@drawable/btn_main_light_10"-->
            <!--                    android:text="@string/obj_email_certify_ok"-->
            <!--                    android:textColor="@color/main_color_100" />-->
            <!--            </LinearLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:text="@string/obj_register_nickname" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_nickname_dupl"
                    android:layout_width="70dp"
                    android:layout_height="@dimen/btn_small_height"
                    android:background="@drawable/btn_main_light_10"
                    android:text="@string/obj_register_nickname_dupl"
                    android:textColor="@color/main_color_100" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_nickname_dupl_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:animateLayoutChanges="true"
                android:text="@string/obj_register_nickname_dupl_check"
                android:textColor="@color/black"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:text="@string/obj_register_password" />

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:text="@string/obj_register_password_check" />

            <EditText
                android:id="@+id/et_pw_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_full_height"
        android:background="@drawable/btn_main_square"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/obj_register_finish" />
</LinearLayout>