<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login_back_1"
    tools:context=".pages.session.LoginActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEV"
        android:id="@+id/btn_dev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_stamp"
        android:shadowColor="#000000"
        android:shadowDx="10.0"
        android:shadowDy="10.0"
        android:shadowRadius="7.0"
        android:text="@string/glb_stamp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/big_title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/gap_horizontal"
        android:paddingVertical="@dimen/gap_line_double"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_full_height"
            android:background="@drawable/btn_main_round"
            android:elevation="3dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/obj_login"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_full_height"
            android:layout_marginTop="@dimen/gap_line_double"
            android:background="@drawable/btn_white_round"
            android:elevation="3dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/obj_register"
            android:textColor="@color/main_color_100" />

        <TextView
            android:id="@+id/tv_login_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_vertical"
            android:gravity="center_horizontal"
            android:text="@string/obj_login_help"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>